[package]
name = "rust_ehph"
version = "0.1.0"
authors = ["kletska <kletska.epa@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
futures = "0.3.15"
serde = "1.0.117"
serde_json = "1.0.59"
qstring = "0.7.2"



[dependencies.mongodb]
version = "1.2.0"
default-features = false
features = ["async-std-runtime"]

